--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@babel/node": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.4"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express-generator": "^4.16.1",
-    "mongoose": "^7.0.4"
+    "express-generator": "^4.16.1"
   }
 }
