--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.21.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.4"
   },
   "author": "",
@@ -26,6 +27,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express-generator": "^4.16.1",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   }
 }
