--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@babel/preset-env": "^7.21.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.4"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "express-generator": "^4.16.1",
     "http": "^0.0.1-security",
