--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.4",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.0.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express-generator": "^4.16.1",
     "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.1"
+    "passport-google-oauth20": "^2.0.0"
   }
 }
