--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@babel/node": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "base-64": "^1.0.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "js-base64": "^3.7.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "passport": "^0.6.0",
@@ -30,7 +34,6 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.0.0",
-    "cors": "^2.8.5",
     "express-generator": "^4.16.1",
     "http": "^0.0.1-security",
     "passport-google-oauth20": "^2.0.0"
