--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "dependencies": {
     "connect-mongo": "^5.0.0",
     "express-generator": "^4.16.1",
-    "http": "^0.0.1-security",
-    "passport-google-oauth20": "^2.0.0"
+    "http": "^0.0.1-security"
   }
 }
